# asr_translation

./: main.py  pyproject.toml
src/app/: main.py  registry.py
src/app/inference/: asr_parakeet.py  base.py  mt_lfm2_enjp.py
src/app/services/: translation_service.py
